# dziennik-tradera

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  AUDYT_KODU.md  CHANGELOG.md  MACIERZ_AUDYTU_CEL_1_8.md  MACIERZ_AUDYTU_REDESIGN_O.md  PROGRESS.md  RAPORT_AUDYTU.md  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  start-dev.bat  start-dev.ps1  tsconfig.base.json
.claude/: launch.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audyt.rs  diagnostics.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs  wersja.rs
apps/desktop/src-tauri/src/application/: accounts.rs  ai_runtime.rs  attachments.rs  backup.rs  broker_templates.rs  emotional_states.rs  export.rs  instrument_import.rs  instruments.rs  intervals.rs  mod.rs  mt5_import.rs  preferences.rs  reports.rs  strategies.rs  trades.rs  trading_rules.rs  trash.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  attachments.rs  backup.rs  broker_templates.rs  emotional_states.rs  export.rs  instrument_import.rs  instruments.rs  intervals.rs  mod.rs  mt5_import.rs  position_sizing.rs  preferences.rs  reports.rs  strategies.rs  trades.rs  trading_rules.rs  trash.rs  updates.rs
apps/desktop/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/src/db/migrations/: 0001_init.sql  0002_seed_instruments.sql  0003_instrument_catalog.sql  0004_automatic_trade_status.sql  0005_trade_emotions.sql  0006_strategy_rules.sql  0007_intervals.sql  0008_attachments.sql  0009_trading_rules.sql  0010_broker_templates.sql  0011_account_template_link.sql  0012_trade_partial_closes.sql  0013_intervals_unique_active_label.sql  0014_ai_analyses.sql
apps/desktop/src-tauri/src/domain/: account.rs  ai_analysis.rs  attachment.rs  backup.rs  balance.rs  broker_template.rs  cash_operation.rs  emotional_state.rs  export_filter.rs  instrument.rs  instrument_import.rs  interval.rs  mod.rs  mt5_import.rs  position_sizing.rs  preferences.rs  strategy.rs  strategy_checklist.rs  trade.rs  trade_audit.rs  trade_calculations.rs  trade_emotions.rs  trade_partial_close.rs  trade_stats.rs  trading_rules.rs
apps/desktop/src-tauri/src/infrastructure/: ai_inference.rs  ai_model_download.rs  backup_archive.rs  mod.rs  pdf_report.rs  sqlite_account_repository.rs  sqlite_ai_analysis_repository.rs  sqlite_attachment_repository.rs  sqlite_broker_template_repository.rs  sqlite_cash_operation_repository.rs  sqlite_emotional_state_repository.rs  sqlite_instrument_repository.rs  sqlite_interval_repository.rs  sqlite_preferences_repository.rs  sqlite_strategy_repository.rs  sqlite_trade_repository.rs  sqlite_trading_rules_repository.rs  update_manifest.rs
docs/: AI_ASYSTENT_WYBOR_MODELU.md  KLUCZE_I_WYDANIE.md  (+11 more)
(+337 files in other folders)
