[package]
name = "desktop"
version = "0.1.0"
description = "Dziennik Tradera - lokalna aplikacja desktopowa"
authors = ["Dziennik Tradera"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled", "backup", "chrono"] }
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }
thiserror = "2.0.18"
chrono = { version = "0.4.45", features = ["serde"] }
sha2 = "0.11.0"

[dev-dependencies]
rust_decimal_macros = "1.40.0"
tempfile = "3.27.0"
