[package]
name = "desktop"
version = "0.1.0"
description = "Dziennik Tradera - lokalna aplikacja desktopowa"
authors = ["Dziennik Tradera"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled", "backup", "chrono"] }
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }
thiserror = "2.0.18"
chrono = { version = "0.4.45", features = ["serde"] }
sha2 = "0.11.0"
csv = "1.4.0"
rust_xlsxwriter = "0.96.0"
zip = "8.6.0"
tauri-plugin-dialog = "2.7.2"
lopdf = "0.44.0"
tempfile = "3.27.0"
tauri-plugin-process = "2.3.1"
base64 = "0.22.1"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-no-provider"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
